--- a/banner/index.html
+++ b/banner/index.html
@@ -5,8 +5,8 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" href="style.css">
-		<script src="index.js"></script>
-		<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+		<script src="./index.js"></script>
 	</head>
 	<body>
 		<div class="box" id="box">
@@ -15,14 +15,3 @@
 		
 	</body>
 </html>
-
-<script>
-	$(function(){
-		var carousel = new Carousel();
-		carousel.init({
-			timer:3000,
-			container:'#box',
-			imgSrc:['img/b1.png','img/b2.png','img/b3.png','img/b4.png','img/b5.png']
-		})
-	})
-</script>
